force-app/main/default/objects/LM_Inventory__c/LM_Inventory__c.object-meta.xml
<CustomObject>
    <label>Item de Inventário</label>
    <nameField>
        <label>Número de Série</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventário</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>