force-app/main/default/objects/LM_Inventory__c/fields/Available_From__c.field-meta.xml
<CustomField>
    <fullName>Available_From__c</fullName>
    <formula>Order__r.EndDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Disponível a partir de</label>
    <type>Date</type>
</CustomField>