force-app/main/default/objects/LM_Inventory__c/fields/Cupboard__c.field-meta.xml
<CustomField>
    <fullName>Cupboard__c</fullName>
    <label>Armário</label>
    <length>12</length>
    <type>Text</type>
</CustomField>