force-app/main/default/objects/LM_Inventory__c/fields/Damage_Description__c.field-meta.xml
<CustomField>
    <fullName>Damage_Description__c</fullName>
    <label>Descricao da Avaria</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>