force-app/main/default/objects/LM_Inventory__c/fields/Expected_Rent_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Rent_Date__c</fullName>
    <formula>Order__r.EffectiveDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data de Aluguer</label>
    <type>Date</type>
</CustomField>