force-app/main/default/objects/LM_Inventory__c/fields/Hallway__c.field-meta.xml
<CustomField>
    <fullName>Hallway__c</fullName>
    <label>Corredor</label>
    <length>12</length>
    <type>Text</type>
</CustomField>