force-app/main/default/objects/LM_Inventory__c/fields/Loja__c.field-meta.xml
<CustomField>
    <fullName>Loja__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loja</label>
    <referenceTo>LM_Store__c</referenceTo>
    <relationshipName>Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>