force-app/main/default/objects/LM_Inventory__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido de Serviço</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Inventário</relationshipLabel>
    <relationshipName>Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>