force-app/main/default/objects/LM_Inventory__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipamento</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Product2.Type__c</field>
            <operation>equals</operation>
            <value>Caução</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Inventário</relationshipLabel>
    <relationshipName>Inventarios</relationshipName>
    <type>Lookup</type>
</CustomField>