force-app/main/default/objects/LM_Inventory__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>Product__r.Name</formula>
    <label>Nome do Produto</label>
    <type>Text</type>
</CustomField>