force-app/main/default/objects/LM_Inventory__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Motivo de Reprovação</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>