force-app/main/default/objects/LM_Inventory__c/fields/Repair_Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Arrival_Time__c</fullName>
    <label>Data de Chegada</label>
    <type>DateTime</type>
</CustomField>