force-app/main/default/objects/LM_Inventory__c/fields/Repair_Exit_Time__c.field-meta.xml
<CustomField>
    <fullName>Repair_Exit_Time__c</fullName>
    <label>Data de Saída</label>
    <type>DateTime</type>
</CustomField>