force-app/main/default/objects/LM_Inventory__c/fields/Shelves__c.field-meta.xml
<CustomField>
    <fullName>Shelves__c</fullName>
    <label>Prateleira</label>
    <length>12</length>
    <type>Text</type>
</CustomField>