force-app/main/default/objects/LM_Inventory__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>&quot;Disponível&quot;</defaultValue>
    <label>Estado</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponível</fullName>
            </value>
            <value>
                <fullName>Indisponível</fullName>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Avariado</fullName>
            </value>
            <value>
                <fullName>Em Reparação</fullName>
            </value>
            <value>
                <fullName>Não Devolvido</fullName>
            </value>
            <value>
                <fullName>Limpeza/Manutenção</fullName>
                <isActive>false</isActive>
                <label>Limpeza/Manutenção</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>