force-app/main/default/objects/LM_Inventory__c/fields/Store_Code__c.field-meta.xml
<CustomField>
    <fullName>Store_Code__c</fullName>
    <formula>Loja__r.Store_API_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Código da Loja</label>
    <type>Text</type>
</CustomField>