force-app/main/default/objects/LM_Inventory__c/fields/Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Store_Name__c</fullName>
    <formula>Loja__r.Name</formula>
    <label>Nome da Loja</label>
    <type>Text</type>
</CustomField>