force-app/main/default/objects/LM_Inventory__c/listViews/All_N_o_Disponiveis.listView-meta.xml
<ListView>
    <fullName>All_N_o_Disponiveis</fullName>
    <columns>NAME</columns>
    <columns>Loja__c</columns>
    <columns>Product__c</columns>
    <columns>Hallway__c</columns>
    <columns>Cupboard__c</columns>
    <columns>Shelves__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Available_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Disponível</value>
    </filters>
    <label>All - Não Disponiveis</label>
</ListView>