force-app/main/default/objects/LM_Inventory__c/listViews/BARREIRO.listView-meta.xml
<ListView>
    <fullName>BARREIRO</fullName>
    <columns>NAME</columns>
    <columns>Loja__c</columns>
    <columns>Product__c</columns>
    <columns>Hallway__c</columns>
    <columns>Cupboard__c</columns>
    <columns>Shelves__c</columns>
    <columns>Order__c</columns>
    <columns>Status__c</columns>
    <columns>Available_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Loja__c</field>
        <operation>equals</operation>
        <value>Barreiro</value>
    </filters>
    <label>BARREIRO</label>
</ListView>